--- a/css/style.css
+++ b/css/style.css
@@ -91,13 +91,13 @@ ul li {
 
 .right {
 	float: right;
-	padding: 0px 200px 0px 0px;
+	padding-right: 250px;
 	
 }
 
 .left {
 	float: left;
-	padding: 0px 0px 0px 200px;
+	padding-left: 250px;
 }
 
 .header {
@@ -184,4 +184,4 @@ ul li {
   right: 20%;
   top: 10%;
   border: solid black 5px;
-  border-radius: 10px;}
+  border-radius: 20px;}
